--- a/www/home.html
+++ b/www/home.html
@@ -365,23 +365,23 @@
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Чистота</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-3.png);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-3.jpg);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Уют</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-1.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-4.jpg);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Атмосфера</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-2.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-5.png);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Безопасность</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-2.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-6.png);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Удобство</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-3.png);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-7.jpg);"></div>
           </div>
         </div>
       </section>
@@ -619,7 +619,7 @@
                 <div class="ask__form-actions">
                   <input class="ask__form-submit btn btn_blue" type="submit" value="Отправить вопрос" />
                   <p class="ask__form-agree">* Оставляя свои контакты данные, вы соглашаетесь с
-                    <a href="#!">политикой конфиденциольности</a>
+                    <a href="static/assets/polytics.docx" target="_blank">политикой конфиденциольности</a>
                   </p>
                 </div>
               </form>
