--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,8 @@
   </style>
   <script>
     var pager = [
-      ['home.html', '01', 'Home', 'Home page']
+      ['home.html', '01', 'Home', 'Home page'],
+      ['landing.html', '02', 'Home landing', 'Landing page']
     ];
   </script>
   <header>
