--- a/www/home.html
+++ b/www/home.html
@@ -142,7 +142,7 @@
           </div>
         </div>
         <div class="screen__video">
-          <video src="static/video/screen_video_720.mp4" loop="loop" autoplay="autoplay" muted="muted"></video>
+          <video src="static/video/screen_video_720.mp4" loop="loop" autoplay="autoplay"></video>
         </div>
       </section>
       <!--begin mission-->
@@ -159,7 +159,7 @@
               <div class="mission__item-count mission__item-count_purple">
                 <span data-anim-count="">75</span>
               </div>
-              <p>города мира</p>
+              <p>городов</p>
             </div>
             <div class="mission__item" data-anim="">
               <div class="mission__item-count mission__item-count_orange">
@@ -197,6 +197,10 @@
               <p>В Бэби-клубе бережно развивают все виды интеллекта: социальный, личностный, пространственный, вербальный, цифровой, духовный, творческий, сенсорный, физический, чувственный. Для каждого возраста мы выбираем именно те задания, которые способствуют
                 комплексному и гармоничному интеллектуальному развитию.</p>
             </div>
+          </div>
+          <div class="eye-blink">
+            <div class="eye-blink__item eye-blink__item_left"></div>
+            <div class="eye-blink__item eye-blink__item_right"></div>
           </div>
         </div>
         <!--begin accordion-->
@@ -242,7 +246,7 @@
       <!--begin benefits-->
       <section class="benefits section" data-anchor="pageThree">
         <div class="benefits__container container">
-          <h2 class="benefits__title title title_black" data-anim-title="">Бэби-клуб - это</h2>
+          <h2 class="benefits__title title title_black" data-anim-title="">Бэби-клуб &#8212 это</h2>
           <div class="benefits__list">
             <div class="benefits__item" data-anim-fast="">
               <div class="benefits__item-pic-wrap">
@@ -401,7 +405,7 @@
       <!--begin library-->
       <section class="library section">
         <div class="library__container container">
-          <h2 class="library__title title" data-anim-title="">БЭБибЛИОТЕКА</h2>
+          <h2 class="library__title title" data-anim-title="">Бэби-библиотека</h2>
           <div class="library__content" data-anim-slow="">
             <div class="library__content-img">
               <span class="library__content-label">Бестселлер на Оzon.ru</span>
@@ -426,11 +430,13 @@
             </div>
           </div>
         </div>
+        <!--+b.particles#js-nuts-particles-->
       </section>
       <!--begin thanks-->
       <section class="thanks section">
         <div class="thanks__container container">
-          <h2 class="thanks__title title" data-anim-title="">1000 спасибо</h2>
+          <h2 class="thanks__title title">
+            <span data-anim-count="1000">1000</span> спасибо</h2>
           <!--begin tabs-->
           <div class="c-tabs">
             <div class="c-tabs__tabs-nav">
@@ -572,37 +578,39 @@
           <h2 class="project__title title" data-anim-title="">Наши проекты</h2>
           <div class="project__inner">
             <div class="project__item" data-anim="">
-              <div class="project__item-pic">
+              <a class="project__item-pic" href="#!">
                 <img src="static/img/content/project-1.png" alt="image" title="" />
-              </div>
+              </a>
               <h6 class="project__item-title">Школа «Белая ворона»</h6>
-              <p>Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства</p>
+              <p>Это школы, где дети находят свое предназначение, учатся сомневаться, думать, расставлять приоритеты и уверенно чувствовать себя в общении с людьми любого возраста.</p>
             </div>
             <div class="project__item" data-anim="">
-              <div class="project__item-pic">
+              <a class="project__item-pic" href="#!">
                 <img src="static/img/content/project-2.png" alt="image" title="" />
-              </div>
+              </a>
               <h6 class="project__item-title">KIDFriendly</h6>
-              <p>Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства</p>
+              <p>Некоммерческий проект Kid-Friendly. Здесь рады детям. Более 1700 организаций — от кафе до офисов банков — рады предложить детям попить воды и «помыть руки».</p>
             </div>
             <div class="project__item" data-anim="">
-              <div class="project__item-pic">
+              <a class="project__item-pic" href="#!">
                 <img src="static/img/content/project-3.png" alt="image" title="" />
-              </div>
+              </a>
               <h6 class="project__item-title">KIDX - онлайн школа</h6>
-              <p>Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства</p>
+              <p>Оффлайн и онлайн-тренинги для родителей, нянь и не только. Про понимание и принятие, осознанность и уважение, любовь и заботу друг о друге.</p>
             </div>
             <div class="project__item" data-anim="">
-              <div class="project__item-pic">
+              <a class="project__item-pic" href="#!">
                 <img src="static/img/content/project-4.png" alt="image" title="" />
-              </div>
+              </a>
               <h6 class="project__item-title">Отцы и дети: инструкция по применению</h6>
-              <p>Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства</p>
+              <p>Персональный проект Юрия Белонощенко, папы пятерых детей. Это цикл встреч-интервью с известными папами, которые делятся своими жизненными принципами на воспитание детей.</p>
             </div>
             <div class="project__item" data-anim="">
-              <div class="project__item-pic"></div>
-              <h6 class="project__item-title">Арина Родионовна</h6>
-              <p>Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства</p>
+              <a class="project__item-pic" href="#!">
+                <img src="static/img/content/project-5.png" alt="image" title="" />
+              </a>
+              <h6 class="project__item-title">Суперняня</h6>
+              <p>Серия тренингов для тех, кто уже няня, или тех, кто задумывается ею стать. Коллекция бесценного опыта Бэби-клуба по общению с детьми и родителями передается в руки няне, мечтающей быть суперняней.</p>
             </div>
           </div>
         </div>
@@ -632,7 +640,7 @@
                 <div class="ask__form-actions">
                   <input class="ask__form-submit btn btn_blue" type="submit" value="Отправить вопрос" />
                   <p class="ask__form-agree">* Оставляя свои контакты данные, вы соглашаетесь с
-                    <a href="static/assets/polytics.docx" target="_blank">политикой конфиденциольности</a>
+                    <a href="static/assets/polytics.docx" target="_blank">политикой конфиденциальности</a>
                   </p>
                 </div>
               </form>
