--- a/www/landing.html
+++ b/www/landing.html
@@ -147,14 +147,10 @@
               <h2 class="screen__title title">в воскресенске на ленина</h2>
               <p>для развития детей от 8 месяцев до 7 лет</p>
             </div>
-            <div class="screen__actions">
-              <a class="screen__actions-btn btn btn_yellow" href="#!">Выбрать клуб</a>
-              <a class="screen__actions-btn btn btn_blue" href="#!">Открыть свой Бэби-клуб</a>
-            </div>
           </div>
         </div>
         <div class="screen__video">
-          <video src="static/video/screen_video_720.mp4" loop="loop" autoplay="autoplay" muted="muted"></video>
+          <video src="static/video/screen_video_720.mp4" loop="loop" autoplay="autoplay"></video>
         </div>
       </section>
       <!--begin subs-block-->
@@ -171,7 +167,7 @@
             <div class="subs-block__form-field">
               <input class="subs-block__form-submit btn btn_yellow" type="submit" value="Записаться на встречу" />
               <p class="subs-block__form-agree">* Оставляя свои контакты данные, Вы соглашаетесь с
-                <a class="underlined" href="static/assets/polytics.docx" target="_blank">политикой конфиденциольности</a>
+                <a class="underlined" href="static/assets/polytics.docx" target="_blank">политикой конфиденциальности</a>
               </p>
             </div>
           </form>
@@ -180,7 +176,7 @@
       <!--begin benefits-->
       <section class="benefits section" data-anchor="pageThree">
         <div class="benefits__container container">
-          <h2 class="benefits__title title title_black" data-anim-title="">Бэби-клуб - это</h2>
+          <h2 class="benefits__title title title_black" data-anim-title="">Бэби-клуб &#8212 это</h2>
           <div class="benefits__list">
             <div class="benefits__item" data-anim-fast="">
               <div class="benefits__item-pic-wrap">
@@ -440,9 +436,9 @@
         </div>
       </section>
       <section class="excurs section">
-        <div class="excurs__container container" data-anim-slow="">
+        <div class="excurs__container container">
           <h2 class="excurs__title title title_black" data-anim-title="">Экскурсия по клубу</h2>
-          <div class="excurs__item">
+          <div class="excurs__item" data-anim-slow="">
             <div class="excurs__item-figures"></div>
             <div class="excurs__item-bg" style="background-image: url(static/img/content/excurs.jpg);"></div>
           </div>
@@ -1017,7 +1013,7 @@
       <!--begin library-->
       <section class="library section">
         <div class="library__container container">
-          <h2 class="library__title title" data-anim-title="">БЭБибЛИОТЕКА</h2>
+          <h2 class="library__title title" data-anim-title="">Бэби-библиотека</h2>
           <div class="library__content" data-anim-slow="">
             <div class="library__content-img">
               <span class="library__content-label">Бестселлер на Оzon.ru</span>
@@ -1042,6 +1038,7 @@
             </div>
           </div>
         </div>
+        <!--+b.particles#js-nuts-particles-->
       </section>
       <!--begin why-us-->
       <section class="why-us section" data-anchor="why-us">
