--- a/www/index.html
+++ b/www/index.html
@@ -123,8 +123,9 @@
   </style>
   <script>
     var pager = [
-      ['home.html', '01', 'Home', 'Home page'],
-      ['landing.html', '02', 'Home landing', 'Landing page']
+      ['home.html', '01', 'Home', ''],
+      ['landing.html', '02', 'Home landing', ''],
+      ['modals.html', '03', 'Modals page', '']
     ];
   </script>
   <header>
