--- a/www/home.html
+++ b/www/home.html
@@ -27,6 +27,10 @@
         <symbol id="icon-check" viewBox="0 0 23 18">
           <use xlink:href="#a" transform="translate(-852 -7889)" />
         </symbol>
+        <symbol id="icon-close" viewBox="0 0 348.333 348.334">
+          <path d="M336.559 68.611L231.016 174.165l105.543 105.549c15.699 15.705 15.699 41.145 0 56.85-7.844 7.844-18.128 11.769-28.407 11.769-10.296 0-20.581-3.919-28.419-11.769L174.167 231.003 68.609 336.563c-7.843 7.844-18.128 11.769-28.416 11.769-10.285 0-20.563-3.919-28.413-11.769-15.699-15.698-15.699-41.139 0-56.85l105.54-105.549L11.774 68.611c-15.699-15.699-15.699-41.145 0-56.844 15.696-15.687 41.127-15.687 56.829 0l105.563 105.554L279.721 11.767c15.705-15.687 41.139-15.687 56.832 0 15.705 15.699 15.705 41.145.006 56.844z"
+          />
+        </symbol>
         <symbol id="icon-facebook" viewBox="0 0 155.139 155.139">
           <path d="M89.584 155.139V84.378h23.742l3.562-27.585H89.584V39.184c0-7.984 2.208-13.425 13.67-13.425l14.595-.006V1.08C115.325.752 106.661 0 96.577 0 75.52 0 61.104 12.853 61.104 36.452v20.341H37.29v27.585h23.814v70.761h28.48z" />
         </symbol>
@@ -129,20 +133,22 @@
       </header>
       <!--begin screen-->
       <section class="screen section">
-        <div class="screen__container container">
-          <div class="screen__inner">
-            <div class="screen__text">
-              <h2 class="screen__title title">238 КЛУБОВ И САДОВ</h2>
-              <p>для развития детей от 8 месяцев до 7 лет</p>
-            </div>
-            <div class="screen__actions">
-              <a class="screen__actions-btn btn btn_yellow" href="#!">Выбрать клуб</a>
-              <a class="screen__actions-btn btn btn_blue" href="#!">Открыть свой Бэби-клуб</a>
+        <div class="screen__block">
+          <div class="screen__container container">
+            <div class="screen__inner">
+              <div class="screen__text">
+                <h2 class="screen__title title">238 КЛУБОВ И САДОВ</h2>
+                <p>для развития детей от 8 месяцев до 7 лет</p>
+              </div>
+              <div class="screen__actions">
+                <a class="screen__actions-btn btn btn_yellow" href="#!">Выбрать клуб</a>
+                <a class="screen__actions-btn btn btn_blue" href="#!">Открыть свой Бэби-клуб</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="screen__video">
-          <video src="static/video/screen_video_720.mp4" loop="loop" autoplay="autoplay"></video>
+          <div class="screen__video">
+            <video src="static/video/screen_video_720.mp4" loop="loop" autoplay="autoplay" muted="muted"></video>
+          </div>
         </div>
       </section>
       <!--begin mission-->
@@ -197,10 +203,6 @@
               <p>В Бэби-клубе бережно развивают все виды интеллекта: социальный, личностный, пространственный, вербальный, цифровой, духовный, творческий, сенсорный, физический, чувственный. Для каждого возраста мы выбираем именно те задания, которые способствуют
                 комплексному и гармоничному интеллектуальному развитию.</p>
             </div>
-          </div>
-          <div class="eye-blink">
-            <div class="eye-blink__item eye-blink__item_left"></div>
-            <div class="eye-blink__item eye-blink__item_right"></div>
           </div>
         </div>
         <!--begin accordion-->
@@ -378,15 +380,15 @@
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Красота</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-2.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/krasota_1.jpg);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Чистота</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-3.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/chistota.jpg);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Уют</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-4.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/uyut_1.jpg);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Атмосфера</h2>
@@ -394,43 +396,70 @@
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Безопасность</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-6.png);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/bezopasnost_1.jpg);"></div>
           </div>
           <div class="interior__slider-item">
             <h2 class="interior__title title" data-anim-title="">Удобство</h2>
-            <div class="interior__slider-img" style="background-image: url(static/img/content/interior-7.jpg);"></div>
+            <div class="interior__slider-img" style="background-image: url(static/img/content/udobstvo_1.jpg);"></div>
           </div>
         </div>
       </section>
       <!--begin library-->
-      <section class="library section">
+      <section class="library section" data-anim-slow="">
         <div class="library__container container">
-          <h2 class="library__title title" data-anim-title="">Бэби-библиотека</h2>
-          <div class="library__content" data-anim-slow="">
-            <div class="library__content-img">
-              <span class="library__content-label">Бестселлер на Оzon.ru</span>
-              <img src="static/img/content/library-book.png" alt="image" title="" />
-            </div>
-            <div class="library__content-info">
-              <div class="library__content-text">
-                <h4 class="library__content-name">«После трёх уже поздно»</h4>
-                <h5 class="library__content-author">Масару Ибука</h5>
-                <p>Легендарная книга расскажет о необходимости и важности раннего развития. Ведь первые три года жизни — неповторимый период в формировании интеллектуальных способностей ребенка, когда каждый день — значительный этап бурного и всестороннего
-                  развития.</p>
-                <div class="library__content-descr">
-                  <p>243 000 экземпляров</p>
-                  <p>2011 г. — Книжная премия Рунета в двух номинациях:</p>
-                  <p>«Выбор пользователей» и «Бестселлер на Озоне»</p>
+          <h2 class="library__title title">Бэби-библиотека</h2>
+          <div class="library__slider js-library-slider">
+            <div class="library__item">
+              <div class="library__content">
+                <div class="library__content-img">
+                  <span class="library__content-label">Бестселлер на Оzon.ru</span>
+                  <img src="static/img/content/library-book.png" alt="image" title="" />
+                </div>
+                <div class="library__content-info">
+                  <div class="library__content-text">
+                    <h4 class="library__content-name">«После трёх уже поздно»</h4>
+                    <h5 class="library__content-author">Масару Ибука</h5>
+                    <p>Легендарная книга расскажет о необходимости и важности раннего развития. Ведь первые три года жизни — неповторимый период в формировании интеллектуальных способностей ребенка, когда каждый день — значительный этап бурного и всестороннего
+                      развития.</p>
+                    <div class="library__content-descr">
+                      <p>243 000 экземпляров</p>
+                      <p>2011 г. — Книжная премия Рунета в двух номинациях:</p>
+                      <p>«Выбор пользователей» и «Бестселлер на Озоне»</p>
+                    </div>
+                  </div>
+                  <div class="library__content-actions">
+                    <a class="library__content-btn btn btn_yellow" href="#!">Получить книгу на e-mail</a>
+                    <a class="library__content-btn btn btn_purple" href="#!">Смотреть всю Бэбиблиотеку</a>
+                  </div>
                 </div>
               </div>
-              <div class="library__content-actions">
-                <a class="library__content-btn btn btn_yellow" href="#!">Получить книгу на e-mail</a>
-                <a class="library__content-btn btn btn_purple" href="#!">Смотреть всю Бэбиблиотеку</a>
+            </div>
+            <div class="library__item">
+              <div class="library__content">
+                <div class="library__content-img">
+                  <span class="library__content-label library__content-label_offset">Бестселлер на Оzon.ru</span>
+                  <img src="static/img/content/library-book-2.jpg" alt="image" title="" />
+                </div>
+                <div class="library__content-info">
+                  <div class="library__content-text">
+                    <h4 class="library__content-name">«Рожденные с характером»</h4>
+                    <h5 class="library__content-author">Евгения Белонощенко</h5>
+                    <p>Хотите узнать, почему ваш ребенок боится темноты, все ломает, не любит делиться игрушками или часто нюхает еду? Читайте книгу основателя Бэби-клуба, психолога Евгении Белонощенко «Рожденные с характером», и вы познакомитесь с популярным
+                      изложением теории, которая в свое время произвела эффект фейерверка в психологическом мире.</p>
+                    <div class="library__content-descr">
+                      <p>C 2013 года книгу «Рожденные с характером» скачали 35778 раз</p>
+                    </div>
+                  </div>
+                  <div class="library__content-actions">
+                    <a class="library__content-btn btn btn_yellow" href="#!">Получить книгу на e-mail</a>
+                    <a class="library__content-btn btn btn_purple" href="#!">Смотреть всю Бэбиблиотеку</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <!--+b.particles#js-nuts-particles-->
+        <div class="particles" id="js-nuts-particles"></div>
       </section>
       <!--begin thanks-->
       <section class="thanks section">
@@ -639,7 +668,7 @@
                 </div>
                 <div class="ask__form-actions">
                   <input class="ask__form-submit btn btn_blue" type="submit" value="Отправить вопрос" />
-                  <p class="ask__form-agree">* Оставляя свои контакты данные, вы соглашаетесь с
+                  <p class="ask__form-agree">* Оставляя свои контактные данные, вы соглашаетесь с
                     <a href="static/assets/polytics.docx" target="_blank">политикой конфиденциальности</a>
                   </p>
                 </div>
