--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,8 @@
     var pager = [
       ['home.html', '01', 'Home', ''],
       ['landing.html', '02', 'Home landing', ''],
-      ['modals.html', '03', 'Modals page', '']
+      ['club-choice.html', '03', 'Club choice page', ''],
+      ['modals.html', '04', 'Modals page', '']
     ];
   </script>
   <header>
