--- a/www/home.html
+++ b/www/home.html
@@ -52,6 +52,10 @@
           <path d="M64.147 331.322c.078 4.985 2.163 9.911 5.688 13.438l55 55c3.599 3.601 8.659 5.697 13.75 5.697 5.091 0 10.151-2.096 13.75-5.697l183.281-183.282c3.601-3.599 5.697-8.659 5.697-13.75s-2.096-10.151-5.697-13.75L152.335 5.697C148.736 2.096 143.676 0 138.585 0c-5.091 0-10.151 2.096-13.75 5.697l-55 55c-3.591 3.598-5.681 8.651-5.681 13.734s2.09 10.136 5.681 13.734l114.562 114.563L69.835 317.291c-3.664 3.667-5.765 8.848-5.688 14.031z"
           />
         </symbol>
+        <symbol id="icon-search" viewBox="0 0 250.313 250.313">
+          <path d="M244.186 214.604l-54.379-54.378c-.289-.289-.628-.491-.93-.76 10.7-16.231 16.945-35.66 16.945-56.554C205.822 46.075 159.747 0 102.911 0S0 46.075 0 102.911c0 56.835 46.074 102.911 102.91 102.911 20.895 0 40.323-6.245 56.554-16.945.269.301.47.64.759.929l54.38 54.38c8.169 8.168 21.413 8.168 29.583 0 8.168-8.169 8.168-21.413 0-29.582zm-141.275-44.458c-37.134 0-67.236-30.102-67.236-67.235 0-37.134 30.103-67.236 67.236-67.236 37.132 0 67.235 30.103 67.235 67.236s-30.103 67.235-67.235 67.235z"
+            fill-rule="evenodd" clip-rule="evenodd" />
+        </symbol>
         <symbol id="icon-triangle-r" viewBox="0 0 415.346 415.346">
           <path d="M41.712 415.346c-11.763 0-21.3-9.537-21.3-21.3V21.299C20.412 9.536 29.949 0 41.712 0l346.122 191.697s15.975 15.975 0 31.951C371.859 239.622 41.712 415.346 41.712 415.346z" />
         </symbol>
@@ -248,7 +252,7 @@
       <!--begin benefits-->
       <section class="benefits section" data-anchor="pageThree">
         <div class="benefits__container container">
-          <h2 class="benefits__title title title_black" data-anim-title="">Бэби-клуб &#8212 это</h2>
+          <h2 class="benefits__title title title_black">Бэби-клуб &#8212 это</h2>
           <div class="benefits__list">
             <div class="benefits__item" data-anim-fast="">
               <div class="benefits__item-pic-wrap">
@@ -647,8 +651,8 @@
       <!--begin ask-->
       <section class="ask section">
         <div class="ask__container container">
-          <h2 class="ask__title title title_black" data-anim-title="">У вас есть вопрос?</h2>
-          <h5 class="ask__sub-title title title_sm" data-anim-title="">Получите ответ из первых уст основателей Бэби-клуба Евгении и Юрия Белонощенко</h5>
+          <h2 class="ask__title title title_black">У вас есть вопрос?</h2>
+          <h5 class="ask__sub-title title title_sm">Получите ответ из первых уст основателей Бэби-клуба Евгении и Юрия Белонощенко</h5>
           <div class="ask__inner" data-anim-slow="">
             <div class="ask__img-wrap">
               <div class="ask__img" style="background-image: url(static/img/content/ask-img.jpg);"></div>
