--- a/www/landing.html
+++ b/www/landing.html
@@ -52,6 +52,10 @@
           <path d="M64.147 331.322c.078 4.985 2.163 9.911 5.688 13.438l55 55c3.599 3.601 8.659 5.697 13.75 5.697 5.091 0 10.151-2.096 13.75-5.697l183.281-183.282c3.601-3.599 5.697-8.659 5.697-13.75s-2.096-10.151-5.697-13.75L152.335 5.697C148.736 2.096 143.676 0 138.585 0c-5.091 0-10.151 2.096-13.75 5.697l-55 55c-3.591 3.598-5.681 8.651-5.681 13.734s2.09 10.136 5.681 13.734l114.562 114.563L69.835 317.291c-3.664 3.667-5.765 8.848-5.688 14.031z"
           />
         </symbol>
+        <symbol id="icon-search" viewBox="0 0 250.313 250.313">
+          <path d="M244.186 214.604l-54.379-54.378c-.289-.289-.628-.491-.93-.76 10.7-16.231 16.945-35.66 16.945-56.554C205.822 46.075 159.747 0 102.911 0S0 46.075 0 102.911c0 56.835 46.074 102.911 102.91 102.911 20.895 0 40.323-6.245 56.554-16.945.269.301.47.64.759.929l54.38 54.38c8.169 8.168 21.413 8.168 29.583 0 8.168-8.169 8.168-21.413 0-29.582zm-141.275-44.458c-37.134 0-67.236-30.102-67.236-67.235 0-37.134 30.103-67.236 67.236-67.236 37.132 0 67.235 30.103 67.235 67.236s-30.103 67.235-67.235 67.235z"
+            fill-rule="evenodd" clip-rule="evenodd" />
+        </symbol>
         <symbol id="icon-triangle-r" viewBox="0 0 415.346 415.346">
           <path d="M41.712 415.346c-11.763 0-21.3-9.537-21.3-21.3V21.299C20.412 9.536 29.949 0 41.712 0l346.122 191.697s15.975 15.975 0 31.951C371.859 239.622 41.712 415.346 41.712 415.346z" />
         </symbol>
@@ -183,7 +187,7 @@
       <!--begin benefits-->
       <section class="benefits section" data-anchor="pageThree">
         <div class="benefits__container container">
-          <h2 class="benefits__title title title_black" data-anim-title="">Бэби-клуб &#8212 это</h2>
+          <h2 class="benefits__title title title_black">Бэби-клуб &#8212 это</h2>
           <div class="benefits__list">
             <div class="benefits__item" data-anim-fast="">
               <div class="benefits__item-pic-wrap">
@@ -1277,8 +1281,8 @@
       <!--begin contact-->
       <section class="contact section" data-anchor="contacts" id="contact">
         <div class="contact__container container">
-          <h2 class="contact__title title" data-anim-title="">ПРИХОДИТЕ В ГОСТИ,</h2>
-          <h2 class="contact__title title" data-anim-title="">ЧТОБЫ УВИДЕТЬ ВСЁ СВОИМИ ГЛАЗАМИ</h2>
+          <h2 class="contact__title title">ПРИХОДИТЕ В ГОСТИ,</h2>
+          <h2 class="contact__title title">ЧТОБЫ УВИДЕТЬ ВСЁ СВОИМИ ГЛАЗАМИ</h2>
           <div class="contact__inner" data-anim-slow="">
             <div class="contact__nav">
               <div class="contact__city">
@@ -1288,20 +1292,48 @@
               <div class="contact__metro">
                 <p class="contact__metro-text">Удобная для Вас ветка Метро:</p>
                 <ul class="contact__metro-list js-branch-list">
-                  <li class="contact__metro-branch contact__metro-branch_1">1</li>
-                  <li class="contact__metro-branch contact__metro-branch_2">2</li>
-                  <li class="contact__metro-branch contact__metro-branch_3">3</li>
-                  <li class="contact__metro-branch contact__metro-branch_4">4</li>
-                  <li class="contact__metro-branch contact__metro-branch_5">5</li>
-                  <li class="contact__metro-branch contact__metro-branch_6">6</li>
-                  <li class="contact__metro-branch contact__metro-branch_7">7</li>
-                  <li class="contact__metro-branch contact__metro-branch_8">8</li>
-                  <li class="contact__metro-branch contact__metro-branch_9">9</li>
-                  <li class="contact__metro-branch contact__metro-branch_10">10</li>
-                  <li class="contact__metro-branch contact__metro-branch_11">11</li>
-                  <li class="contact__metro-branch contact__metro-branch_12">12</li>
-                  <li class="contact__metro-branch contact__metro-branch_13">13</li>
-                  <li class="contact__metro-branch contact__metro-branch_14">14</li>
+                  <li class="contact__metro-branch contact__metro-branch_1">
+                    <span>1</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_2">
+                    <span>2</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_3">
+                    <span>3</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_4">
+                    <span>4</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_5">
+                    <span>5</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_6">
+                    <span>6</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_7">
+                    <span>7</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_8">
+                    <span>8</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_9">
+                    <span>9</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_10">
+                    <span>10</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_11">
+                    <span>11</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_12">
+                    <span>12</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_13">
+                    <span>13</span>
+                  </li>
+                  <li class="contact__metro-branch contact__metro-branch_14">
+                    <span>14</span>
+                  </li>
                 </ul>
               </div>
               <div class="contact__info js-contact-info">
