--- a/www/index.html
+++ b/www/index.html
@@ -123,10 +123,11 @@
   </style>
   <script>
     var pager = [
-      ['home.html', '01', 'Home', ''],
-      ['landing.html', '02', 'Home landing', ''],
-      ['club-choice.html', '03', 'Club choice page', ''],
-      ['modals.html', '04', 'Modals page', '']
+      ['home.html', '01', 'Главная', ''],
+      ['landing.html', '02', 'Лендинг', ''],
+      ['club-choice.html', '03', 'Выбор клуба', ''],
+      ['modals.html', '04', 'Поп-апы', ''],
+      ['baby-garden.html', '05', 'Садик', '']
     ];
   </script>
   <header>
